updated paths and directories; outputs cleared for better viewing

--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk4_impute_hist_capital.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk4_impute_hist_capital.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8317fc9e-85cb-4ba2-a70c-385af99ef86f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "420b64af-3878-402a-91ae-84d17c6ee67c",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dd1ab6ef-1e0a-48db-9669-94f63fd4fc97",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "000ab181-d963-4d78-93aa-f1928e027da8",
    "metadata": {},
    "outputs": [],
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e4235387-e433-4dac-aaa6-7c99b17772fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# PWT10.0\n",
     "pwt100 = (\n",
-    "    pd.read_excel(sset.DIR_YPK_RAW / \"pwt_100.xlsx\")\n",
+    "    pd.read_excel(sset.PATH_PWT_RAW)\n",
     "    .rename(columns={\"countrycode\": \"ccode\"})\n",
     "    .set_index([\"ccode\", \"year\"])\n",
     ")\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a56796f-ee84-4f67-81ac-f28bcf011162",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "85e4b9de-3858-42ff-b704-09340228e7e1",
    "metadata": {},
    "outputs": [],
@@ -273,18 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "50e2a01c-c3d5-4a3a-9417-b9f1fa371ff5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ALA' 'BES' 'CCK' 'CXR' 'KO-' 'PCN' 'SJM' 'TKL' 'UMI' 'VAT']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "no_k_cc = np.setdiff1d(\n",
     "    ccodes,\n",
@@ -304,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3a12b978-f12e-41a9-b8fb-c62ca72a4d09",
    "metadata": {},
    "outputs": [],
@@ -332,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6e3f9c39-98ac-46c7-bc83-f9fc095c5d95",
    "metadata": {},
    "outputs": [],
@@ -402,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cac9e416-d97c-4543-bbc8-59a6fda1db6a",
    "metadata": {},
    "outputs": [],
@@ -432,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9517dc36-1d6d-4d0d-8071-08896c37f58d",
    "metadata": {},
    "outputs": [],
@@ -508,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2a192c31-d056-4865-af91-ed9bbd39a522",
    "metadata": {},
    "outputs": [],
@@ -666,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2498b437-8ca5-4667-9832-14d301dcd9c3",
    "metadata": {},
    "outputs": [],
@@ -679,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0e85f524-75c0-47c8-9094-2e4be0a51494",
    "metadata": {},
    "outputs": [],
@@ -739,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "377ca697-9eac-47c4-b020-aa2beea3e8c1",
    "metadata": {},
    "outputs": [],
@@ -756,75 +748,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0a8afb79-0b5c-412b-9e7f-c88c51682ae5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cl3</th>\n",
-       "      <th>ky_lower</th>\n",
-       "      <th>ky_upper</th>\n",
-       "      <th>ky_growth</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.860900</td>\n",
-       "      <td>3.901621</td>\n",
-       "      <td>0.014439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.809758</td>\n",
-       "      <td>6.298417</td>\n",
-       "      <td>0.036708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.616297</td>\n",
-       "      <td>13.853664</td>\n",
-       "      <td>0.165892</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cl3  ky_lower   ky_upper  ky_growth\n",
-       "0    0  0.860900   3.901621   0.014439\n",
-       "1    1  1.809758   6.298417   0.036708\n",
-       "2    2  2.616297  13.853664   0.165892"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl_gr"
    ]
@@ -841,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "44211983-4acc-4563-a2db-8295f08152b0",
    "metadata": {},
    "outputs": [],
@@ -971,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5912a76a-c9d0-437b-8e27-79a68494a3a3",
    "metadata": {},
    "outputs": [],
@@ -991,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "edc9a75d-a2aa-4ab9-9dd0-3af69deb1b98",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "b2e8b379-9a7d-41c6-9f3e-b212e5c036ba",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "acc538be-0b1b-4c8a-ad81-a97bf5bff40e",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "750e3be2-7035-4d5c-b24a-7120c80b02c5",
    "metadata": {},
    "outputs": [],
@@ -1117,25 +1044,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "759dfd1b-35c7-401e-9141-a1ceb9eb7b41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbc8deb13f2143c8bbbccd34cf1ebc31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/180 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## for the partially-filled countries, fill in by using growth rates\n",
     "for cc in tqdm(some_rnna):\n",
@@ -1178,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "6643385e-48c8-4f7d-91fc-e425429999ad",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7938bf65-53cf-45cb-9cc6-c82b3f9ff3aa",
    "metadata": {},
    "outputs": [],
@@ -1245,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ca274a42-929b-4e16-8919-6de744263559",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "1074ed0c-efbe-45ae-915b-62e8942caf82",
    "metadata": {},
    "outputs": [],
