--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk5_projected_yp.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk5_projected_yp.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "abb30260",
    "metadata": {},
    "source": [
     "## Clean up and impute missing projected (2010-2100) GDPpc, GDP, and population values"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8be17532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a56987e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cececc9",
    "metadata": {},
    "source": [
     "## Importing and cleaning SSP-IAM projections\n",
@@ -52,10 +56,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a94cef05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "iiasa_raw_df = pd.read_csv(sset.DIR_YPK_RAW / \"SspDb_country_data_2013-06-12.csv\")\n",
+    "iiasa_raw_df = pd.read_csv(\n",
+    "    sset.DIR_IIASA_PROJECTIONS / \"SspDb_country_data_2013-06-12.csv\"\n",
+    ")\n",
     "iiasa_pop = iiasa_raw_df.loc[iiasa_raw_df.VARIABLE == \"Population\", :].sort_values(\n",
     "    [\"SCENARIO\", \"MODEL\", \"REGION\"]\n",
     ")\n",
@@ -66,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf013e35",
    "metadata": {},
    "source": [
     "### Population\n",
@@ -78,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1736cc0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f53976a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e07e3967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee42d035",
    "metadata": {},
    "source": [
     "#### Cleaning up for the case of France\n",
@@ -178,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "744b2830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b482929d",
    "metadata": {},
    "source": [
     "The above confirms that OECD cases do include all of the five overseas departments when calculating their population. So we will subtract these values to get the \"mainland France\" population values."
@@ -206,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dcb3ce56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +236,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54be959d",
    "metadata": {},
    "source": [
     "#### Interpolating, turning into a long-panel format, and taking only the IIASA cases\n",
@@ -231,6 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26dff56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,6 +271,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fcb7a6cd",
    "metadata": {},
    "source": [
     "#### Detecting those ISOs that are missing, and getting the country-level population estimates for these ISOs (from LandScan 2019)"
@@ -262,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bfe54e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9452c7d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +321,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f37fe493",
    "metadata": {},
    "source": [
     "Note that the current shapefile information we are using often has more than one MultiPolygon per ISO code, so we will create a shapefile dataset with one MultiPolygon per ISO code."
@@ -309,6 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8939a774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +353,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31adba1c",
    "metadata": {},
    "source": [
     "Based on the ISO-relevant shapefiles and grid-level population in LandScan 2019, let us find the country-level population information."
@@ -339,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa2df5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ed2a60a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2bebb46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,6 +422,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64903a47",
    "metadata": {},
    "source": [
     "#### Attaching LandScan 2019 values to the overall population projections"
@@ -404,6 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2859792b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,6 +454,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edc0ff29",
    "metadata": {},
    "source": [
     "### GDPpc and GDP\n",
@@ -438,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "883d2312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,6 +546,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb2bf593",
    "metadata": {},
    "source": [
     "#### Attaching the population values, creating GDPpc, and log-linearly interpolating"
@@ -524,6 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd08ffc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,6 +586,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52f32d19",
    "metadata": {},
    "source": [
     "#### Getting the by-scenario global GDPpc"
@@ -562,6 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0407ecf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,6 +622,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b776cc4",
    "metadata": {},
    "source": [
     "#### GDPpc for countries that are not in the current projections (subbing in the global GDPpc), and attaching it with the existing projections"
@@ -596,6 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc910fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,6 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d54ed5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,6 +668,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7278d8e5",
    "metadata": {
     "tags": []
    },
@@ -641,12 +679,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a5497598",
    "metadata": {},
    "outputs": [],
    "source": [
     "## inflator from 2005 to 2019\n",
     "pwt = (\n",
-    "    pd.read_excel(sset.DIR_YPK_RAW / \"pwt_100.xlsx\")\n",
+    "    pd.read_excel(sset.PATH_PWT_RAW)\n",
     "    .rename(columns={\"countrycode\": \"ccode\"})\n",
     "    .set_index([\"ccode\", \"year\"])\n",
     ")\n",
@@ -657,6 +696,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7213e95",
    "metadata": {},
    "source": [
     "#### Organizing and exporting"
@@ -665,6 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "602991c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +716,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -689,291 +730,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "1fe33cb6bebf4bbcbb760d072d4360e0": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "212143be603449c4984f7599487b3652": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "225db7747800498288899ea3c66fe7f8": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_54bcc6dc79a44c7f845e16c992781c01",
-       "max": 10,
-       "style": "IPY_MODEL_adc7867e6a1e492db907eb987439d126",
-       "value": 10
-      }
-     },
-     "3fddc399a8cb41108d001938097cd19c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "43b66ad3a0244e19a6b59aac4025a55a": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "443fcb46485147d19264cfc90e58a113": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "4c52c929c1d04002a8edfa6800681a28": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_c919b944e30e4607914187408adecf28",
-        "IPY_MODEL_225db7747800498288899ea3c66fe7f8",
-        "IPY_MODEL_6eb2a31a29104c5cb79e6204366c7d8d"
-       ],
-       "layout": "IPY_MODEL_eac20744d1ec4cac87564937d3bc2534"
-      }
-     },
-     "54bcc6dc79a44c7f845e16c992781c01": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "54d14e481a0a4acaa216fd2ca10f71cb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "5892c0d47ee6485dbeb747ae84b805d2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_a126330619cd4700a9f3d054e1e5c64b",
-       "style": "IPY_MODEL_cd1fc1976f334992b6e7b13014e936f9",
-       "value": "100%"
-      }
-     },
-     "5fc96f686a924a21b8083690b0bed73b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "65d1d3fe1953496e95d958ec9fce4ab0": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_fcdbd9e19f444954af3547ab69507f07",
-       "style": "IPY_MODEL_5fc96f686a924a21b8083690b0bed73b",
-       "value": " 65/65 [00:00&lt;00:00, 217.99it/s]"
-      }
-     },
-     "6df0289d43424c239f9fe5a3bc7a096b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_c1bda75ba75445fbb1c5fe1b1fe057af",
-       "max": 10,
-       "style": "IPY_MODEL_43b66ad3a0244e19a6b59aac4025a55a",
-       "value": 10
-      }
-     },
-     "6eb2a31a29104c5cb79e6204366c7d8d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_f05ab6b949e641f99c96010341168455",
-       "style": "IPY_MODEL_3fddc399a8cb41108d001938097cd19c",
-       "value": " 10/10 [00:09&lt;00:00,  1.06it/s]"
-      }
-     },
-     "7307af71e79d4ba1909f626d2d60b91f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_5892c0d47ee6485dbeb747ae84b805d2",
-        "IPY_MODEL_7643657713d44f95b8e0c5a4ac47b210",
-        "IPY_MODEL_65d1d3fe1953496e95d958ec9fce4ab0"
-       ],
-       "layout": "IPY_MODEL_f9e9e5fd99ab4871abf947540e81d3db"
-      }
-     },
-     "7643657713d44f95b8e0c5a4ac47b210": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_93a97ea0fb7a4313a22ce84474510949",
-       "max": 65,
-       "style": "IPY_MODEL_54d14e481a0a4acaa216fd2ca10f71cb",
-       "value": 65
-      }
-     },
-     "7dbecaf2104841229e610f3278db1ec5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_212143be603449c4984f7599487b3652",
-       "style": "IPY_MODEL_443fcb46485147d19264cfc90e58a113",
-       "value": " 10/10 [00:00&lt;00:00, 47.29it/s]"
-      }
-     },
-     "93a97ea0fb7a4313a22ce84474510949": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a126330619cd4700a9f3d054e1e5c64b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "adbc3e55dfa946449376d8996e763a2f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "adc7867e6a1e492db907eb987439d126": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "b5716e0db49e41cfa36d04628dc8836a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "c1bda75ba75445fbb1c5fe1b1fe057af": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "c210bd240bf548b5901796931092b2bb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "c919b944e30e4607914187408adecf28": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_e600c3159f2d4c1c8a6c0797780d8eb1",
-       "style": "IPY_MODEL_c210bd240bf548b5901796931092b2bb",
-       "value": "100%"
-      }
-     },
-     "cd1fc1976f334992b6e7b13014e936f9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "d5aa29d413dc4758bd3fcfe125e53b45": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_f601715b349a42caac99e4d2efc4a61e",
-        "IPY_MODEL_6df0289d43424c239f9fe5a3bc7a096b",
-        "IPY_MODEL_7dbecaf2104841229e610f3278db1ec5"
-       ],
-       "layout": "IPY_MODEL_1fe33cb6bebf4bbcbb760d072d4360e0"
-      }
-     },
-     "e600c3159f2d4c1c8a6c0797780d8eb1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "eac20744d1ec4cac87564937d3bc2534": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "f05ab6b949e641f99c96010341168455": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "f601715b349a42caac99e4d2efc4a61e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_b5716e0db49e41cfa36d04628dc8836a",
-       "style": "IPY_MODEL_adbc3e55dfa946449376d8996e763a2f",
-       "value": "100%"
-      }
-     },
-     "f9e9e5fd99ab4871abf947540e81d3db": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "fcdbd9e19f444954af3547ab69507f07": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
