--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk6_projected_capital.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk6_projected_capital.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3d62e24d",
    "metadata": {},
    "source": [
     "## Projecting capital stock values (2010-2100) according to Dellink et al. (2017)"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e86388c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9bf979ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7de17e72",
    "metadata": {
     "tags": []
    },
@@ -61,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3419bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +100,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "782f31fb",
    "metadata": {},
    "source": [
     "### Getting the overall GDP elasticity with respect to capital\n",
@@ -105,6 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f378d31f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eca8cb4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +145,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27f22a84",
    "metadata": {},
    "source": [
     "#### Calculating the initial marginal product of capital (${MPK}_{r, t_0}$, with $t_0 = 2010$) and appending other necessary information\n",
@@ -161,6 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57a27e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +207,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4217f3b9",
    "metadata": {},
    "source": [
     "### Using the perpetual inventory method (PIM) with the dynamic parameter equations specified in Dellink et al. (2017)\n",
@@ -209,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca9057b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c5f73ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "93355c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fb94a190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa952c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1dab4482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +338,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84ea369b",
    "metadata": {},
    "source": [
     "### Checking against the Dellink et al. (2017)'s Figure 6 (capital intensity plots)"
@@ -328,6 +346,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b66b707",
    "metadata": {},
    "source": [
     "We examine our 6 options as below. After examination with the graph as well as the SSE values, it seems that the case utilizing by-country MPK, **capital-only** production function, and the IIASA overall MPK are the ones that perform the best, at least with the four countries whose information are available.\n",
@@ -338,6 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6c1d3944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +368,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "418aedca",
    "metadata": {},
    "source": [
     "For sanity check, we will also graph top ten and bottom cases of capital stock (in natural logarithm) for some specified SSP (SSP3 below) and some year (2100 below)."
@@ -356,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "de9cdc57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46819cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +396,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e240b14",
    "metadata": {},
    "source": [
     "## Re-organizing the dataset and exporting\n",
@@ -383,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "042d6543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +453,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0132fe16",
    "metadata": {},
    "source": [
     "### Scale creation with respect to historical 2019 values of population and current-PPP (2019 USD) capital stock"
@@ -436,6 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "636201d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,6 +486,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8298c07a",
    "metadata": {},
    "source": [
     "### Exporting: historical 2019 values"
@@ -467,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3156eb87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,6 +517,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "282846eb",
    "metadata": {},
    "source": [
     "### Exporting: projected values (2010-2100)"
@@ -496,6 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8205448f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -545,400 +576,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "040db106324c4abd81563871745293dc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_83bfc2aefd1542e0baab123bcefaa360",
-       "max": 244,
-       "style": "IPY_MODEL_b69fd7f5225b43f4811ad1441976cfa8",
-       "value": 244
-      }
-     },
-     "0e90063d5c10403c8453a501356253a6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "17b6c5b7dbd3420f90337d8758d27f0a": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "VBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_b88afe012a21414a99f16f1c12e19c58",
-        "IPY_MODEL_8438a6a4db644e26965cc20852ced659",
-        "IPY_MODEL_94b4e74cb26046f8bd6db682c9f18307",
-        "IPY_MODEL_83193ba4ce8e47e6a2334ecca9617174"
-       ],
-       "layout": "IPY_MODEL_fe81feff8d6e442496a657283ff69552"
-      }
-     },
-     "2ac115079e954ef08002294ca59c13d4": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "3091379726144b58a53b0fb179ac73ed": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_2ac115079e954ef08002294ca59c13d4",
-       "style": "IPY_MODEL_363c458d39f24ea7a788ec488fcca648",
-       "value": " 244/244 [00:14&lt;00:00, 17.14it/s]"
-      }
-     },
-     "363c458d39f24ea7a788ec488fcca648": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "3fd30ab5bb8747098a60cd4bf2d9d4f3": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "4001e6e60cc545b48dd466525ecb3010": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Maximum",
-       "layout": "IPY_MODEL_a7e363cdb1ff4bbf84035e8eb296aee6",
-       "step": 1,
-       "style": "IPY_MODEL_0e90063d5c10403c8453a501356253a6"
-      }
-     },
-     "486dba293684475a865b2344ae9eab35": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "4e90797174464c1e821651b8e3ec40df": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "5651057d861247d4a8acfdc631f3ad05": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "663ea5765e884bdd8028775766e9989b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "678087f2efdf4cb98faf14bd144efebb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_de29c3d940924cb1b94b9ab0eb483b45",
-       "style": "IPY_MODEL_c31ad4c255cd44b69cb7e538b29dbd90",
-       "value": "100%"
-      }
-     },
-     "7036731ae0af4aa1b73c955465a9ebd2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Scale",
-       "layout": "IPY_MODEL_a7e363cdb1ff4bbf84035e8eb296aee6",
-       "style": "IPY_MODEL_8bca8af257a44e57a382221a1b4b71f8"
-      }
-     },
-     "752b186c0da0411fae738419227bd45d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "500px"
-      }
-     },
-     "7869e250443f498cab9896ed6f020b94": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "7ebe44776ae743a38bb43a8c60014618": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "83193ba4ce8e47e6a2334ecca9617174": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_8bfd233344e645a2b0a220806d191c5b",
-       "style": "IPY_MODEL_90e7920347e54c3e8eeed4cdd551975f",
-       "value": "<p><b>Dashboard: </b><a href=\"/services/dask-gateway/clusters/compute-rhg.a57a5152f4144a27a9282e61116a2113/status\" target=\"_blank\">/services/dask-gateway/clusters/compute-rhg.a57a5152f4144a27a9282e61116a2113/status</a></p>\n"
-      }
-     },
-     "83bfc2aefd1542e0baab123bcefaa360": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8438a6a4db644e26965cc20852ced659": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_cc4e3d6a28434d5ab2c2087744a1cc43",
-        "IPY_MODEL_bbb3de278aed4692902e8cda6d0ae48f"
-       ],
-       "layout": "IPY_MODEL_8c08331152ac47baa4e19e7df8dbcdf1"
-      }
-     },
-     "84e2e221de9d4042b32054b777577f4e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "8bca8af257a44e57a382221a1b4b71f8": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "8bfd233344e645a2b0a220806d191c5b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8c08331152ac47baa4e19e7df8dbcdf1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8d8d6961b4984dfeb5a35756d325de8e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "90e7920347e54c3e8eeed4cdd551975f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "94b4e74cb26046f8bd6db682c9f18307": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_7ebe44776ae743a38bb43a8c60014618",
-       "style": "IPY_MODEL_7869e250443f498cab9896ed6f020b94",
-       "value": "<p><b>Name: </b>compute-rhg.a57a5152f4144a27a9282e61116a2113</p>"
-      }
-     },
-     "9f9444b984b641b68dfcdba9d15cba1c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_f47ae50dd3f74472a82a4c65885d18cb",
-        "IPY_MODEL_7036731ae0af4aa1b73c955465a9ebd2"
-       ],
-       "layout": "IPY_MODEL_b76b784f3f7c494b939597d40ecef4ab"
-      }
-     },
-     "a0786cb1ab0c40169f79621f8708bc22": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_678087f2efdf4cb98faf14bd144efebb",
-        "IPY_MODEL_040db106324c4abd81563871745293dc",
-        "IPY_MODEL_3091379726144b58a53b0fb179ac73ed"
-       ],
-       "layout": "IPY_MODEL_5651057d861247d4a8acfdc631f3ad05"
-      }
-     },
-     "a7e363cdb1ff4bbf84035e8eb296aee6": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "150px"
-      }
-     },
-     "b541b7600e9248f58d459fbb8d947b3c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Minimum",
-       "layout": "IPY_MODEL_a7e363cdb1ff4bbf84035e8eb296aee6",
-       "step": 1,
-       "style": "IPY_MODEL_c4e932b060c04a99a7c9784c4af2a516"
-      }
-     },
-     "b69fd7f5225b43f4811ad1441976cfa8": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "b76b784f3f7c494b939597d40ecef4ab": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "b88afe012a21414a99f16f1c12e19c58": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_4e90797174464c1e821651b8e3ec40df",
-       "style": "IPY_MODEL_84e2e221de9d4042b32054b777577f4e",
-       "value": "<h2>GatewayCluster</h2>"
-      }
-     },
-     "bbb3de278aed4692902e8cda6d0ae48f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "AccordionModel",
-      "state": {
-       "_titles": {
-        "0": "Manual Scaling",
-        "1": "Adaptive Scaling"
-       },
-       "children": [
-        "IPY_MODEL_9f9444b984b641b68dfcdba9d15cba1c",
-        "IPY_MODEL_ce999de6e5974ca49901345c31a0e5c3"
-       ],
-       "layout": "IPY_MODEL_752b186c0da0411fae738419227bd45d",
-       "selected_index": null
-      }
-     },
-     "c31ad4c255cd44b69cb7e538b29dbd90": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "c4e932b060c04a99a7c9784c4af2a516": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "cc4e3d6a28434d5ab2c2087744a1cc43": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_ffb6beccdb8e465cad0882b837cdc578",
-       "style": "IPY_MODEL_663ea5765e884bdd8028775766e9989b",
-       "value": "\n<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table style=\"text-align: right;\">\n    <tr><th>Workers</th> <td>16</td></tr>\n    <tr><th>Cores</th> <td>16</td></tr>\n    <tr><th>Memory</th> <td>89.92 GiB</td></tr>\n</table>\n</div>\n"
-      }
-     },
-     "ce999de6e5974ca49901345c31a0e5c3": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_b541b7600e9248f58d459fbb8d947b3c",
-        "IPY_MODEL_4001e6e60cc545b48dd466525ecb3010",
-        "IPY_MODEL_ebfb48bc1db54ac4bf80fd09ac6a12b5"
-       ],
-       "layout": "IPY_MODEL_486dba293684475a865b2344ae9eab35"
-      }
-     },
-     "de29c3d940924cb1b94b9ab0eb483b45": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ebfb48bc1db54ac4bf80fd09ac6a12b5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Adapt",
-       "layout": "IPY_MODEL_a7e363cdb1ff4bbf84035e8eb296aee6",
-       "style": "IPY_MODEL_3fd30ab5bb8747098a60cd4bf2d9d4f3"
-      }
-     },
-     "f47ae50dd3f74472a82a4c65885d18cb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Workers",
-       "layout": "IPY_MODEL_a7e363cdb1ff4bbf84035e8eb296aee6",
-       "step": 1,
-       "style": "IPY_MODEL_8d8d6961b4984dfeb5a35756d325de8e"
-      }
-     },
-     "fe81feff8d6e442496a657283ff69552": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ffb6beccdb8e465cad0882b837cdc578": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "150px"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
